--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="index.html">Главная</a>
                 </li>
                 <li>
-                    <a href="photos.html">Каталог продукции</a>
+                    <a href="#">Каталог продукции</a>
                 </li>
                 <li>
                     <a href="#">Подбор программы</a>
